--- a/todo.html
+++ b/todo.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="max-width= 1000px width=device-width, initial-scale=1.0" charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 <head>
 <title>Todo</title>
 </head>
-<body>Hey</body>
+<body>
+<div id="root">
+<div>
 
+</body>
+<!-- Load React. -->
+<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+<!-- Replace this before deploying-->
+<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+<script src="script.js" type="text/babel"></script>
 </html>
