--- a/todo.html
+++ b/todo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="max-width= 1000px width=device-width, initial-scale=1.0" charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <head>
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="root">
+<div class="task-box low-priority"></div>
 <div>
 
 </body>
@@ -17,5 +18,5 @@
   <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
 <!-- Replace this before deploying-->
 <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-<script src="script.js" type="text/babel"></script>
+<script src="script.js" type="text/babel"></script
 </html>
